--- a/notebooks/model-test.ipynb
+++ b/notebooks/model-test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "8f937365-15c3-41b4-89c5-62ad62771999",
    "metadata": {},
    "outputs": [
@@ -10,17 +10,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/tk/repos/erc\n"
+      "/home/tae898/repos/erc\n"
      ]
     }
    ],
    "source": [
-    "%cd /home/tk/repos/erc/"
+    "%cd /home/tae898/repos/erc/"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "f0941f3c-16c9-41a6-9f78-cba4bb356913",
    "metadata": {},
    "outputs": [
@@ -30,7 +30,7 @@
        "('IEMOCAP', 'upper', 1000, 0, 4)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -39,7 +39,7 @@
     "ROOT_DIR = './multimodal-datasets/'\n",
     "# model_checkpoint= '/home/tk/repos/erc/results/MELD/roberta-large/SEEDS/2021-05-08-19-57-31-speaker_mode-upper-num_past_utterances-1000-num_future_utterances-1000-batch_size-4-seed-4/checkpoint-9992/'\n",
     "# model_checkpoint = '/home/tk/repos/erc/results/IEMOCAP/roberta-large/SEEDS/2021-05-08-16-15-19-speaker_mode-upper-num_past_utterances-1000-num_future_utterances-1000-batch_size-4-seed-2/checkpoint-5975/'\n",
-    "model_checkpoint = '/home/tk/repos/erc/results/IEMOCAP/roberta-large/SEEDS/2021-05-09-12-19-54-speaker_mode-upper-num_past_utterances-1000-num_future_utterances-0-batch_size-4-seed-4/checkpoint-5975/'\n",
+    "model_checkpoint = '/home/tae898/repos/erc/results/IEMOCAP/roberta-large/SEEDS/2021-05-09-12-19-54-speaker_mode-upper-num_past_utterances-1000-num_future_utterances-0-batch_size-4-seed-4/checkpoint-5975/'\n",
     "\n",
     "DATASET = model_checkpoint.split('/')[6]\n",
     "params = model_checkpoint.split('/')[9]\n",
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "900e9d77-d234-4daf-8489-37bbede007a7",
    "metadata": {},
    "outputs": [
@@ -61,11 +61,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-05-15 13:17:54.479 INFO utils - _load_utterance_ordered: every text file exists fine!\n",
-      "2021-05-15 13:17:54.480 INFO utils - _string2tokens: converting utterances into tokens ...\n",
-      "2021-05-15 13:17:54.482 INFO utils - _string2tokens: creating input utterance data ... \n",
-      "100%|██████████| 31/31 [00:01<00:00, 17.55it/s]\n",
-      "2021-05-15 13:17:58.716 INFO utils - _create_input: number of truncated utterances: 1131\n"
+      "2021-05-17 18:27:13.711 INFO utils - _load_utterance_ordered: every text file exists fine!\n",
+      "2021-05-17 18:27:13.711 INFO utils - _string2tokens: converting utterances into tokens ...\n",
+      "2021-05-17 18:27:13.713 INFO utils - _string2tokens: creating input utterance data ... \n",
+      "100%|██████████| 31/31 [00:01<00:00, 16.13it/s]\n",
+      "2021-05-17 18:27:17.589 INFO utils - _create_input: number of truncated utterances: 1003\n"
      ]
     }
    ],
@@ -101,69 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "13889c69-c11a-488b-8f0f-a08b7e2cb413",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "foo = model.get_input_embeddings()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "3d19728a-61fc-4df6-8757-026bbf35a5d5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "id": "49aee747-25b1-4979-9f09-9b6d286fdcc1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "foo.training"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "76b1f42e-9ad3-4da5-b98e-66a3b025a62b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[0., 0., 0.,  ..., 0., 0., 0.]], grad_fn=<EmbeddingBackward>)"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "foo(torch.tensor([1]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "ffb848c2-5839-4147-ad8e-2e665fc7d25f",
    "metadata": {},
    "outputs": [],
@@ -203,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "8ee14fb6-995f-4b88-8020-f1d78b7e18fc",
    "metadata": {},
    "outputs": [
@@ -211,26 +149,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('<s>ELIZABETH: Okay, so big news. WILLIAM: What? WILLIAM: Come on, what? '\n",
-      " \"ELIZABETH: I'm getting married. WILLIAM: Shut up. ELIZABETH: Yeah. WILLIAM: \"\n",
-      " 'No way. ELIZABETH: Yeah. WILLIAM: He asked you? ELIZABETH: Uh-huh. WILLIAM: '\n",
-      " 'No way, when? when,when, When did it happen? ELIZABETH: Just a couple days '\n",
-      " 'ago. WILLIAM: Oh my gosh. ELIZABETH: [LAUGHTER] WILLIAM: And you actually '\n",
-      " \"said yes.  I can't believe it.  I never thought you would get married. \"\n",
-      " 'ELIZABETH: I know me neither. WILLIAM: Oh my gosh. ELIZABETH: Right, I '\n",
-      " 'thought I would be way older too. I thought I would be I be at least thirty '\n",
-      " \"something. WILLIAM: Oh absolutely. WILLIAM: Well, we always said we'd be in \"\n",
-      " 'our thirtieth when we got married. And we were going to get married to each '\n",
-      " \"other if we didn't by then ELIZABETH: Yeah. ELIZABETH: I know, right. What'd \"\n",
-      " \"we say, when we were thirty nine? WILLIAM: Thirty nine, yeah.  I can't \"\n",
-      " 'believe it.  So you broke our pact. Thanks a lot. ELIZABETH: '\n",
-      " \"Sorry.</s></s>WILLIAM: Thanks a lot.  Well, okay, you've got to tell me the \"\n",
-      " 'details.  What did he say?  Where was it?  What happened?</s>')\n",
+      "(\"<s>Okay, so big news. What? Come on, what? I'm getting married. Shut up. \"\n",
+      " 'Yeah. No way. Yeah. He asked you? Uh-huh. No way, when? when,when, When did '\n",
+      " 'it happen? Just a couple days ago. Oh my gosh. [LAUGHTER] And you actually '\n",
+      " \"said yes.  I can't believe it.  I never thought you would get married. I \"\n",
+      " 'know me neither. Oh my gosh. Right, I thought I would be way older too. I '\n",
+      " 'thought I would be I be at least thirty something. Oh absolutely. Well, we '\n",
+      " \"always said we'd be in our thirtieth when we got married. And we were going \"\n",
+      " \"to get married to each other if we didn't by then Yeah. I know, right. \"\n",
+      " \"What'd we say, when we were thirty nine? Thirty nine, yeah.  I can't believe \"\n",
+      " 'it.  So you broke our pact. Thanks a lot. Sorry.</s></s>Thanks a lot.  Well, '\n",
+      " \"okay, you've got to tell me the details.  What did he say?  Where was it?  \"\n",
+      " 'What happened?</s>')\n",
       "\n",
       "'data_idx: 1146'\n",
       "'pred: excited'\n",
       "'truth: excited'\n",
-      "'number of tokens in the input: 352'\n",
+      "'number of tokens in the input: 239'\n",
       "\n"
      ]
     }
