--- a/notebooks/training-results-fp16-batched.ipynb
+++ b/notebooks/training-results-fp16-batched.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "f0a04b5c-80bb-413c-998f-2f442c96e456",
    "metadata": {},
    "outputs": [
@@ -10,17 +10,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/tk/repos/erc/results\n"
+      "/home/tae898/repos/erc/results\n"
      ]
     }
    ],
    "source": [
-    "%cd /home/tk/repos/erc/results"
+    "%cd /home/tae898/repos/erc/results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "2619a3d4",
    "metadata": {},
    "outputs": [],
@@ -99,11 +99,11 @@
     "        keyname += f', {str(timestamp)}'\n",
     "        stats_test_ = {}\n",
     "        for metric in  ['test_loss', 'test_f1_weighted', 'test_f1_micro', 'test_f1_macro']:\n",
-    "            stats_test_[metric] = (np.mean([foo[metric] for foo in stats_test]), len([foo[metric] for foo in stats_test]))\n",
+    "            stats_test_[metric] = (np.mean([foo[metric] for foo in stats_test]), np.std([foo[metric] for foo in stats_test]), len([foo[metric] for foo in stats_test]))\n",
     "            \n",
     "        stats_val_ = {}\n",
     "        for metric in  ['eval_loss', 'eval_f1_weighted', 'eval_f1_micro', 'eval_f1_macro']:\n",
-    "            stats_val_[metric] = (np.mean([foo[metric] for foo in stats_val]), len([foo[metric] for foo in stats_val]))\n",
+    "            stats_val_[metric] = (np.mean([foo[metric] for foo in stats_val]), np.std([foo[metric] for foo in stats_val]), len([foo[metric] for foo in stats_val]))\n",
     "            \n",
     "        to_return[keyname] = (stats_val_, stats_test_)\n",
     "        \n",
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "a10c8838",
    "metadata": {},
    "outputs": [
@@ -132,104 +132,104 @@
      "output_type": "stream",
      "text": [
       "DATASET: IEMOCAP, roberta: roberta-large, speaker_mode: None, num_past_utterances: 0, num_future_utterances: 0, 2021-05-09-11-21-35\n",
-      "({'eval_f1_macro': (0.5522587758713577, 5),\n",
-      "  'eval_f1_micro': (0.5687755102040817, 5),\n",
-      "  'eval_f1_weighted': (0.575727996274017, 5),\n",
-      "  'eval_loss': (1.2397764921188354, 5)},\n",
-      " {'test_f1_macro': (0.5378345315121387, 5),\n",
-      "  'test_f1_micro': (0.5617755856966707, 5),\n",
-      "  'test_f1_weighted': (0.5587721595281857, 5),\n",
-      "  'test_loss': (1.2600319862365723, 5)})\n",
+      "({'eval_f1_macro': (0.5522587758713577, 0.005700503695160694, 5),\n",
+      "  'eval_f1_micro': (0.5687755102040817, 0.006505052020616038, 5),\n",
+      "  'eval_f1_weighted': (0.575727996274017, 0.005460606873912623, 5),\n",
+      "  'eval_loss': (1.2397764921188354, 0.06936472873560774, 5)},\n",
+      " {'test_f1_macro': (0.5378345315121387, 0.006522106517741987, 5),\n",
+      "  'test_f1_micro': (0.5617755856966707, 0.0073301425142795786, 5),\n",
+      "  'test_f1_weighted': (0.5587721595281857, 0.006840271384498524, 5),\n",
+      "  'test_loss': (1.2600319862365723, 0.037221526818381916, 5)})\n",
       "\n",
       "DATASET: IEMOCAP, roberta: roberta-large, speaker_mode: upper, num_past_utterances: 0, num_future_utterances: 0, 2021-05-09-11-49-51\n",
-      "({'eval_f1_macro': (0.5269594714657198, 5),\n",
-      "  'eval_f1_micro': (0.5724489795918368, 5),\n",
-      "  'eval_f1_weighted': (0.564236788122536, 5),\n",
-      "  'eval_loss': (1.2878952741622924, 5)},\n",
-      " {'test_f1_macro': (0.5431934834368952, 5),\n",
-      "  'test_f1_micro': (0.5637484586929716, 5),\n",
-      "  'test_f1_weighted': (0.5608727948849529, 5),\n",
-      "  'test_loss': (1.3399529695510863, 5)})\n",
+      "({'eval_f1_macro': (0.5269594714657198, 0.010379405536027687, 5),\n",
+      "  'eval_f1_micro': (0.5724489795918368, 0.007717416490281227, 5),\n",
+      "  'eval_f1_weighted': (0.564236788122536, 0.005601506278689179, 5),\n",
+      "  'eval_loss': (1.2878952741622924, 0.04621741931503711, 5)},\n",
+      " {'test_f1_macro': (0.5431934834368952, 0.005246401178079798, 5),\n",
+      "  'test_f1_micro': (0.5637484586929716, 0.0071004587170840575, 5),\n",
+      "  'test_f1_weighted': (0.560872794884953, 0.006838565818616568, 5),\n",
+      "  'test_loss': (1.3399529695510863, 0.02710581041443506, 5)})\n",
       "\n",
       "DATASET: IEMOCAP, roberta: roberta-large, speaker_mode: upper, num_past_utterances: 0, num_future_utterances: 1000, 2021-05-09-15-16-25\n",
-      "({'eval_f1_macro': (0.6396472234317585, 5),\n",
-      "  'eval_f1_micro': (0.6495918367346938, 5),\n",
-      "  'eval_f1_weighted': (0.6504960283305034, 5),\n",
-      "  'eval_loss': (1.8104423761367798, 5)},\n",
-      " {'test_f1_macro': (0.6453711024980999, 5),\n",
-      "  'test_f1_micro': (0.6674475955610357, 5),\n",
-      "  'test_f1_weighted': (0.6656272077776554, 5),\n",
-      "  'test_loss': (1.6912848472595214, 5)})\n",
+      "({'eval_f1_macro': (0.6396472234317584, 0.013680590763494559, 5),\n",
+      "  'eval_f1_micro': (0.6495918367346938, 0.01109573650536179, 5),\n",
+      "  'eval_f1_weighted': (0.6504960283305034, 0.01020846277487317, 5),\n",
+      "  'eval_loss': (1.8104423761367798, 0.3882764954185471, 5)},\n",
+      " {'test_f1_macro': (0.6453711024980999, 0.006587585239162013, 5),\n",
+      "  'test_f1_micro': (0.6674475955610358, 0.006484929120742161, 5),\n",
+      "  'test_f1_weighted': (0.6656272077776554, 0.004839493882345372, 5),\n",
+      "  'test_loss': (1.6912848472595214, 0.33412209305717105, 5)})\n",
       "\n",
       "DATASET: IEMOCAP, roberta: roberta-large, speaker_mode: upper, num_past_utterances: 1000, num_future_utterances: 0, 2021-05-09-12-19-54\n",
-      "({'eval_f1_macro': (0.6597466866669253, 5),\n",
-      "  'eval_f1_micro': (0.6693877551020408, 5),\n",
-      "  'eval_f1_weighted': (0.6666148556427564, 5),\n",
-      "  'eval_loss': (1.3905875444412232, 5)},\n",
-      " {'test_f1_macro': (0.6689570035188008, 5),\n",
-      "  'test_f1_micro': (0.6871763255240444, 5),\n",
-      "  'test_f1_weighted': (0.6856809139267018, 5),\n",
-      "  'test_loss': (1.259392774105072, 5)})\n",
+      "({'eval_f1_macro': (0.6597466866669253, 0.010837695056091235, 5),\n",
+      "  'eval_f1_micro': (0.6693877551020408, 0.008264676216863906, 5),\n",
+      "  'eval_f1_weighted': (0.6666148556427562, 0.007426962361417682, 5),\n",
+      "  'eval_loss': (1.3905875444412232, 0.37610052719233045, 5)},\n",
+      " {'test_f1_macro': (0.6689570035188008, 0.029427809685156278, 5),\n",
+      "  'test_f1_micro': (0.6871763255240444, 0.020472270992572445, 5),\n",
+      "  'test_f1_weighted': (0.6856809139267019, 0.022639715810633135, 5),\n",
+      "  'test_loss': (1.259392774105072, 0.23324612483391333, 5)})\n",
       "\n",
       "DATASET: IEMOCAP, roberta: roberta-large, speaker_mode: upper, num_past_utterances: 1000, num_future_utterances: 1000, 2021-05-08-16-15-19\n",
-      "({'eval_f1_macro': (0.62225173556929, 5),\n",
-      "  'eval_f1_micro': (0.6393877551020408, 5),\n",
-      "  'eval_f1_weighted': (0.6393675494445887, 5),\n",
-      "  'eval_loss': (1.0893967151641846, 5)},\n",
-      " {'test_f1_macro': (0.6593415963373445, 5),\n",
-      "  'test_f1_micro': (0.6743526510480887, 5),\n",
-      "  'test_f1_weighted': (0.6741956238807851, 5),\n",
-      "  'test_loss': (0.9940088391304016, 5)})\n",
+      "({'eval_f1_macro': (0.62225173556929, 0.013124909180567024, 5),\n",
+      "  'eval_f1_micro': (0.6393877551020408, 0.013668899632359474, 5),\n",
+      "  'eval_f1_weighted': (0.6393675494445887, 0.013131825801780794, 5),\n",
+      "  'eval_loss': (1.0893967151641846, 0.0536085487879549, 5)},\n",
+      " {'test_f1_macro': (0.6593415963373445, 0.01478072671367545, 5),\n",
+      "  'test_f1_micro': (0.6743526510480887, 0.012558919237002432, 5),\n",
+      "  'test_f1_weighted': (0.6741956238807851, 0.01290999036130419, 5),\n",
+      "  'test_loss': (0.9940088391304016, 0.054569210131915014, 5)})\n",
       "\n",
       "DATASET: MELD, roberta: roberta-large, speaker_mode: None, num_past_utterances: 0, num_future_utterances: 0, 2021-05-09-10-34-30\n",
-      "({'eval_f1_macro': (0.49769530133977274, 5),\n",
-      "  'eval_f1_micro': (0.6445446348061317, 5),\n",
-      "  'eval_f1_weighted': (0.6310382873181728, 5),\n",
-      "  'eval_loss': (1.0687896013259888, 5)},\n",
-      " {'test_f1_macro': (0.4711702840026922, 5),\n",
-      "  'test_f1_micro': (0.6472030651340996, 5),\n",
-      "  'test_f1_weighted': (0.6374340068650503, 5),\n",
-      "  'test_loss': (1.0612706422805787, 5)})\n",
+      "({'eval_f1_macro': (0.4976953013397728, 0.010085638843148228, 5),\n",
+      "  'eval_f1_micro': (0.6445446348061317, 0.004088650693870024, 5),\n",
+      "  'eval_f1_weighted': (0.6310382873181728, 0.003771889253918822, 5),\n",
+      "  'eval_loss': (1.0687896013259888, 0.022409618237624752, 5)},\n",
+      " {'test_f1_macro': (0.47117028400269223, 0.009756345772609967, 5),\n",
+      "  'test_f1_micro': (0.6472030651340996, 0.00887500567289878, 5),\n",
+      "  'test_f1_weighted': (0.6374340068650504, 0.007576161077227481, 5),\n",
+      "  'test_loss': (1.0612706422805787, 0.035330383593786804, 5)})\n",
       "\n",
       "DATASET: MELD, roberta: roberta-large, speaker_mode: upper, num_past_utterances: 0, num_future_utterances: 0, 2021-05-09-09-46-30\n",
-      "({'eval_f1_macro': (0.48847254387259903, 5),\n",
-      "  'eval_f1_micro': (0.6371505861136159, 5),\n",
-      "  'eval_f1_weighted': (0.623769957569515, 5),\n",
-      "  'eval_loss': (1.170855164527893, 5)},\n",
-      " {'test_f1_macro': (0.46928286476559455, 5),\n",
-      "  'test_f1_micro': (0.6440613026819924, 5),\n",
-      "  'test_f1_weighted': (0.6345787122115116, 5),\n",
-      "  'test_loss': (1.149923324584961, 5)})\n",
+      "({'eval_f1_macro': (0.48847254387259903, 0.008495853701994283, 5),\n",
+      "  'eval_f1_micro': (0.6371505861136159, 0.010769340758761875, 5),\n",
+      "  'eval_f1_weighted': (0.623769957569515, 0.005859307103685082, 5),\n",
+      "  'eval_loss': (1.170855164527893, 0.08526505672547598, 5)},\n",
+      " {'test_f1_macro': (0.46928286476559455, 0.011713978274065371, 5),\n",
+      "  'test_f1_micro': (0.6440613026819924, 0.010337729933511139, 5),\n",
+      "  'test_f1_weighted': (0.6345787122115116, 0.005355029472872086, 5),\n",
+      "  'test_loss': (1.149923324584961, 0.08976748597921823, 5)})\n",
       "\n",
       "DATASET: MELD, roberta: roberta-large, speaker_mode: upper, num_past_utterances: 0, num_future_utterances: 1000, 2021-05-10-09-49-06\n",
-      "({'eval_f1_macro': (0.4965479575059077, 5),\n",
-      "  'eval_f1_micro': (0.6503155996393147, 5),\n",
-      "  'eval_f1_weighted': (0.6355222708985134, 5),\n",
-      "  'eval_loss': (1.2762720584869385, 5)},\n",
-      " {'test_f1_macro': (0.4683521430057107, 5),\n",
-      "  'test_f1_micro': (0.653256704980843, 5),\n",
-      "  'test_f1_weighted': (0.6422649707423742, 5),\n",
-      "  'test_loss': (1.2563609838485719, 5)})\n",
+      "({'eval_f1_macro': (0.4965479575059077, 0.011459399507116217, 5),\n",
+      "  'eval_f1_micro': (0.6503155996393147, 0.008272205548190945, 5),\n",
+      "  'eval_f1_weighted': (0.6355222708985134, 0.004283409125717582, 5),\n",
+      "  'eval_loss': (1.2762720584869385, 0.23882561122396728, 5)},\n",
+      " {'test_f1_macro': (0.4683521430057108, 0.012352855406170054, 5),\n",
+      "  'test_f1_micro': (0.6532567049808429, 0.0077769284023695056, 5),\n",
+      "  'test_f1_weighted': (0.6422649707423743, 0.002742997035039805, 5),\n",
+      "  'test_loss': (1.2563609838485719, 0.23830774197874785, 5)})\n",
       "\n",
       "DATASET: MELD, roberta: roberta-large, speaker_mode: upper, num_past_utterances: 1000, num_future_utterances: 0, 2021-05-09-18-15-01\n",
-      "({'eval_f1_macro': (0.5335582959109558, 5),\n",
-      "  'eval_f1_micro': (0.6643823264201985, 5),\n",
-      "  'eval_f1_weighted': (0.6567062929470665, 5),\n",
-      "  'eval_loss': (1.695301079750061, 5)},\n",
-      " {'test_f1_macro': (0.4805377507237064, 5),\n",
-      "  'test_f1_micro': (0.651800766283525, 5),\n",
-      "  'test_f1_weighted': (0.6455350975434817, 5),\n",
-      "  'test_loss': (1.773275661468506, 5)})\n",
+      "({'eval_f1_macro': (0.5335582959109558, 0.013736411856708508, 5),\n",
+      "  'eval_f1_micro': (0.6643823264201985, 0.004576583423065662, 5),\n",
+      "  'eval_f1_weighted': (0.6567062929470664, 0.005184104960563743, 5),\n",
+      "  'eval_loss': (1.695301079750061, 0.34121903295795375, 5)},\n",
+      " {'test_f1_macro': (0.48053775072370647, 0.017029589352614217, 5),\n",
+      "  'test_f1_micro': (0.6518007662835249, 0.00980244070065738, 5),\n",
+      "  'test_f1_weighted': (0.6455350975434817, 0.008393357993359898, 5),\n",
+      "  'test_loss': (1.773275661468506, 0.36145308383427205, 5)})\n",
       "\n",
       "DATASET: MELD, roberta: roberta-large, speaker_mode: upper, num_past_utterances: 1000, num_future_utterances: 1000, 2021-05-08-19-57-31\n",
-      "({'eval_f1_macro': (0.5556886436897545, 5),\n",
-      "  'eval_f1_micro': (0.6815148782687106, 5),\n",
-      "  'eval_f1_weighted': (0.6739214836802828, 5),\n",
-      "  'eval_loss': (1.2840325355529785, 5)},\n",
-      " {'test_f1_macro': (0.48879753943586934, 5),\n",
-      "  'test_f1_micro': (0.6626819923371647, 5),\n",
-      "  'test_f1_weighted': (0.6561223421668305, 5),\n",
-      "  'test_loss': (1.3610458850860596, 5)})\n",
+      "({'eval_f1_macro': (0.5556886436897545, 0.013761174492631442, 5),\n",
+      "  'eval_f1_micro': (0.6815148782687106, 0.006537265630438883, 5),\n",
+      "  'eval_f1_weighted': (0.6739214836802829, 0.006083439104247666, 5),\n",
+      "  'eval_loss': (1.2840325355529785, 0.11457416568222668, 5)},\n",
+      " {'test_f1_macro': (0.4887975394358694, 0.00665075670382589, 5),\n",
+      "  'test_f1_micro': (0.6626819923371647, 0.0043455775873587335, 5),\n",
+      "  'test_f1_weighted': (0.6561223421668305, 0.0041761291012733515, 5),\n",
+      "  'test_loss': (1.3610458850860596, 0.12069501090284862, 5)})\n",
       "\n"
      ]
     }
@@ -273,6 +273,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.10"
+  },
+  "metadata": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
   }
  },
  "nbformat": 4,
