--- a/notebooks/training-results-fp16-batched.ipynb
+++ b/notebooks/training-results-fp16-batched.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "id": "2619a3d4",
    "metadata": {},
    "outputs": [],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "id": "a10c8838",
    "metadata": {},
    "outputs": [
@@ -140,6 +140,16 @@
       "  'test_f1_micro': (0.5617755856966707, 0.0073301425142795786, 5),\n",
       "  'test_f1_weighted': (0.5587721595281857, 0.006840271384498524, 5),\n",
       "  'test_loss': (1.2600319862365723, 0.037221526818381916, 5)})\n",
+      "\n",
+      "DATASET: IEMOCAP, roberta: roberta-large, speaker_mode: None, num_past_utterances: 1000, num_future_utterances: 1000, 2021-05-17-22-02-20\n",
+      "({'eval_f1_macro': (0.5918548396452185, 0.013224703460383593, 5),\n",
+      "  'eval_f1_micro': (0.6218367346938776, 0.006848147647168361, 5),\n",
+      "  'eval_f1_weighted': (0.6177202952197651, 0.008984988114688916, 5),\n",
+      "  'eval_loss': (0.978229534626007, 0.017938782802415995, 5)},\n",
+      " {'test_f1_macro': (0.6253152837177337, 0.026139324899799712, 5),\n",
+      "  'test_f1_micro': (0.6404438964241678, 0.020586323524049276, 5),\n",
+      "  'test_f1_weighted': (0.6401577334598076, 0.021110077339919903, 5),\n",
+      "  'test_loss': (0.9373827576637268, 0.0210231178570917, 5)})\n",
       "\n",
       "DATASET: IEMOCAP, roberta: roberta-large, speaker_mode: upper, num_past_utterances: 0, num_future_utterances: 0, 2021-05-09-11-49-51\n",
       "({'eval_f1_macro': (0.5269594714657198, 0.010379405536027687, 5),\n",
@@ -190,6 +200,16 @@
       "  'test_f1_micro': (0.6472030651340996, 0.00887500567289878, 5),\n",
       "  'test_f1_weighted': (0.6374340068650504, 0.007576161077227481, 5),\n",
       "  'test_loss': (1.0612706422805787, 0.035330383593786804, 5)})\n",
+      "\n",
+      "DATASET: MELD, roberta: roberta-large, speaker_mode: None, num_past_utterances: 1000, num_future_utterances: 1000, 2021-05-17-18-24-48\n",
+      "({'eval_f1_macro': (0.543405981225946, 0.013941075682803367, 5),\n",
+      "  'eval_f1_micro': (0.6694319206492336, 0.0010820559062218128, 5),\n",
+      "  'eval_f1_weighted': (0.6622215604046071, 0.0035632579942559946, 5),\n",
+      "  'eval_loss': (1.5122009754180907, 0.3003993406985055, 5)},\n",
+      " {'test_f1_macro': (0.4884772583741713, 0.013542890313878878, 5),\n",
+      "  'test_f1_micro': (0.6574712643678161, 0.010174560170697124, 5),\n",
+      "  'test_f1_weighted': (0.650709478773146, 0.008282916120317254, 5),\n",
+      "  'test_loss': (1.611864447593689, 0.3325411893150695, 5)})\n",
       "\n",
       "DATASET: MELD, roberta: roberta-large, speaker_mode: upper, num_past_utterances: 0, num_future_utterances: 0, 2021-05-09-09-46-30\n",
       "({'eval_f1_macro': (0.48847254387259903, 0.008495853701994283, 5),\n",
